--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -5,9 +5,9 @@
 #
 
 import /init.environ.rc
-import /init.usb.rc
+#import /init.usb.rc
 import /init.${ro.hardware}.rc
-import /init.usb.configfs.rc
+#import /init.usb.configfs.rc
 
 # Include CM's extra init file
 import /init.cm.rc
