--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -649,11 +649,11 @@ service ueventd /sbin/ueventd
     critical
     seclabel u:r:ueventd:s0
 
-service healthd /sbin/healthd
-    class core
-    critical
-    seclabel u:r:healthd:s0
-    group root system wakelock
+#service healthd /sbin/healthd
+#    class core
+#    critical
+#    seclabel u:r:healthd:s0
+#    group root system wakelock
 
 service console /system/bin/sh
     class core
