--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -678,3 +678,7 @@ service flash_recovery /system/bin/install-recovery.sh
 #on property:persist.sys.recovery_update=true
 #    start flash_recovery
 
+service sensorservice /system/bin/sensorservice
+    class main
+    user system
+    group system
