--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -159,25 +159,25 @@ on init
     # this ensures that the cpusets are present and usable, but the device's
     # init.rc must actually set the correct cpus
     mkdir /dev/cpuset/foreground
-    write /dev/cpuset/foreground/cpus 0
-    write /dev/cpuset/foreground/mems 0
+    write /dev/cpuset/foreground/cpuset.cpus 0
+    write /dev/cpuset/foreground/cpuset.mems 0
     mkdir /dev/cpuset/foreground/boost
-    write /dev/cpuset/foreground/boost/cpus 0
-    write /dev/cpuset/foreground/boost/mems 0
+    write /dev/cpuset/foreground/boost/cpuset.cpus 0
+    write /dev/cpuset/foreground/boost/cpuset.mems 0
     mkdir /dev/cpuset/background
-    write /dev/cpuset/background/cpus 0
-    write /dev/cpuset/background/mems 0
+    write /dev/cpuset/background/cpuset.cpus 0
+    write /dev/cpuset/background/cpuset.mems 0
 
     # system-background is for system tasks that should only run on
     # little cores, not on bigs
     # to be used only by init, so don't change system-bg permissions
     mkdir /dev/cpuset/system-background
-    write /dev/cpuset/system-background/cpus 0
-    write /dev/cpuset/system-background/mems 0
+    write /dev/cpuset/system-background/cpuset.cpus 0
+    write /dev/cpuset/system-background/cpuset.mems 0
 
     mkdir /dev/cpuset/top-app
-    write /dev/cpuset/top-app/cpus 0
-    write /dev/cpuset/top-app/mems 0
+    write /dev/cpuset/top-app/cpuset.cpus 0
+    write /dev/cpuset/top-app/cpuset.mems 0
 
     # change permissions for all cpusets we'll touch at runtime
     chown system system /dev/cpuset
